--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,12 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "guzzlehttp/guzzle": "4.0.*@RC"
+        "guzzlehttp/guzzle": "4.*"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*"
     },
     "autoload": {
         "psr-4": { "GuzzleHttp\\Subscriber\\Progress\\": "src/" }
-    },
-    "minimum-stability": "dev"
+    }
 }
