--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "guzzlehttp/guzzle": "4.*"
+        "guzzlehttp/guzzle": "~4.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.*"
+        "phpunit/phpunit": "~4.0"
     },
     "autoload": {
         "psr-4": { "GuzzleHttp\\Subscriber\\Progress\\": "src/" }
